--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6,6 +6,26 @@
 }
 body{
     background-color: #2f2f2f;
+    font-family: 'Roboto Condensed', sans-serif;
+}
+#categories-dropdown{
+    background-color: #2f2f2f;
+    position: absolute;
+    top:121px;
+
+    margin-left: -450px;
+}
+
+.drop-cat{
+    width:1800px;
+    display: flex;
+    flex-direction: column;
+    height: 200px;
+    justify-items: center;
+}
+.test{
+    flex-wrap: wrap;
+
 }
 
 .select-category {
@@ -59,32 +79,33 @@ ul {
     height: 121px;
     display: grid;
     grid-template-rows: 60px 1px 60px;
-    grid-template-columns: 5% 10% 10% 50% 20% 5%;
+    grid-template-columns: 5% 5% 10% 55% 20% 5%;
     grid-template-areas: ". . . auth-panel auth-panel ." "line line line line line line" ". logo-image logo-text nav-categories search-bar .";
-    position: relative;
-
+    /*position: relative;*/
 }
-
 .auth-panel {
+    padding-top: 25px;
     grid-area: auth-panel;
     justify-self: end;
-    align-self: end;
+
 }
 
 .auth-panel li {
     display: inline-block;
+    padding-left: 8px;
 }
 
 .auth-panel a {
     text-decoration: none;
     color: #cccccc;
+
 }
 
 .nav-categories ul > li {
     display: inline-block;
-    justify-self: center;
     margin-top: 10px;
     flex-wrap: nowrap;
+    height: 47px;
 }
 
 .logo-image {
@@ -103,13 +124,12 @@ ul {
     grid-area: nav-categories;
     margin-right: auto;
     margin-left: auto;
-    padding-top: 12px;
-    font-size: 16px;
-
+    padding-top: 8px;
+    font-size: 118%;
 }
 
 .nav-categories li {
-    margin: 15px;
+    margin: 25px;
 }
 
 .nav-categories a {
@@ -119,22 +139,82 @@ ul {
 .nav-categories a:hover{
     color: #ff5f38;
 }
+/**********DROPDOWN MENU***********/
+#one-sub, #two-sub, #three-sub, #four-sub{
+    margin-top: 10px;
+    display: none;
+    position:absolute;
+    background: #2f2f2f;
+    width: 100%;
+    height: 250px;
+    left:0;
+    right:0;
+}
+#one-sub li, #two-sub li{
+    display: block;
+}
+
+.one-sub-menu-content{
+    display: grid;
+    grid-template-columns: repeat(3, [col-start] 270px [col-end]);
+    grid-template-rows: repeat(3, [row-start] 70px [row-end]);
+    justify-content: center;
+
+
+}
+.first-sub-menu-cat{
+    border-style: none none solid none;
+    border-width: 1px;
+    border-color: whitesmoke;
+    width: 78%;
+    display: flex;
+    flex-direction: row;
+}
+.first-sub-menu-cat li{
+    margin: 0;
+    font-size: 85%;
+}
+
+.first-sub-menu-cat img{
+    float: left;
+    padding-right: 20px;
+    padding-top: 17px;
+}
+.first-sub-menu-cat span{
+    overflow: hidden;
+    position: relative;
+    top: 30%;
+    transform: translateY(-30%);
+
+}
+
+/***********/
 
 .search-bar {
     grid-area: search-bar;
-    width: 55%;
-    margin-top: 12px;
+    margin-top: 10px;
+    background-color: inherit;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #4c4c4c;
+    height: 40px;
+    width: 190px;
     justify-self: end;
 
 }
-
-.form-control, .btn-default {
-    background-color: #2f2f2f;
+#search-input{
+    background-color: inherit;
+    border: none;
+    height: 40px;
+    padding-left: 5px;
+    width: 75%;
+    font-size: 110%;
 }
 
-.btn-default {
-    border-left: none;
+#search-input textarea:focus, input:focus, button:focus{
+    outline: none;
 }
+
 
 /**********/
 /*INFO BAR*/
@@ -145,39 +225,31 @@ ul {
 }
 
 .info-bar {
+    display: grid;
+    grid-template-columns: 5% 25% 5% 35% 25% 5%;
+    grid-template-areas: ". arrow-left info-bar-icon info-bar-text arrow-right . ";
     background-color: #191919;
     height: 60px;
-    line-height: 55px;
+    align-items: center;
 }
 
 .arrow-left {
-    position: absolute;
-    left: 30%;
+    grid-area: arrow-left;
+    justify-self: end;
 }
 
 .arrow-right {
-    position: absolute;
-    right: 30%;
-}
-
-.info-bar-content {
-    width: 50%;
-    margin: 0 auto;
-    padding: 40px 0;
+    grid-area: arrow-right;
 }
 
 .info-bar-icon {
-    position: absolute;
-    left: 38%;
+    grid-area: info-bar-icon;
+    justify-self: center;
 }
 
 .info-bar-text {
-    position: absolute;
-    left: 40%;
-    right: 35%;
-    text-align: center;
-    line-height: 55px;
-
+    grid-area: info-bar-text;
+    justify-self: center;
 }
 
 /**********/
@@ -482,16 +554,17 @@ ul {
     align-items: center;
     grid-template-columns: 30% 70%;
     grid-template-areas: 'category-photo top-category';
-    width: 83%;
+    width: 280px;
     height: 80px;
 }
 #top-category{
     grid-area: top-category;
     font-size: 85%;
-    padding-left: 8%;
 }
+
 #top-category p{
     padding-top: 10px;
+    padding-left: 20px;
 }
 #category-photo{
     grid-area: category-photo;
@@ -500,32 +573,54 @@ ul {
 
 #subcategories {
     grid-area: subcategories;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    align-items: flex-start;
-    max-height: 1200px
-}
-
-.desc {
-    height: 70px;
-    font-size: 95%;
-    margin-left: 100px;
-    margin-top: 10px;
+    display: grid;
+    /*display: flex;*/
+    /*flex-direction: column;*/
+    /*flex-wrap: wrap;*/
+    /*align-items: flex-start;*/
+    grid-template-columns: repeat(auto-fill, minmax(200px, 350px));
+    grid-template-rows: repeat(auto-fill, minmax(150px, 190px));
+    grid-column-gap: 3em;
+    height: auto;
+    margin-left: 70px;
+    margin-right: 70px;
+    /*max-height: 1000px*/
 }
 
 .single-subcategory {
-    width: 35%;
+    width: 55%;
+    display: grid;
+    grid-template-rows: 60% 40%;
+    grid-template-areas: "photo" "desc";
     border-style: none none solid none;
     border-width: 1px;
     padding-top: 20px;
 }
 
+
 .single-subcategory img {
+    grid-area: photo;
     float: left;
     padding-right: 40px;
     padding-top: 5px;
+    width: 70%;
+    height:auto;
 }
+.desc {
+    grid-area: desc;
+    /*height: 70px;*/
+    font-size: 95%;
+    /*margin-left: 100px;*/
+    margin-top: 10px;
+    position:relative;
+}
+.desc p{
+    position: absolute;
+    bottom:0;
+
+}
+
+
 
 @media only screen and (min-width: 2000px){
     .wrapper {
@@ -628,13 +723,13 @@ ul {
         height: 122px;
         display: grid;
         grid-template-rows: 60px 1px 60px 1px;
-        grid-template-columns: 2% 5% 13% 55% 20% 5%;
+        grid-template-columns: 2% 5% 13% 57% 20% 3%;
         grid-template-areas: ". . . auth-panel . " "line line line line line" ". logo-image logo-text nav-categories search-bar .";
         position: relative;
     }
 
     .auth-panel {
-        font-size: 85%;
+        font-size: 14px;
     }
 
     .auth-panel li {
@@ -647,7 +742,7 @@ ul {
     }
 
     .nav-categories {
-        font-size: 97%;
+        font-size: 118%;
     }
 
     .search-bar {
@@ -779,26 +874,29 @@ ul {
         height: 122px;
         display: grid;
         grid-template-rows: 60px 1px 60px 1px;
-        grid-template-columns: 2% 5% 13% 57% 20% 3%;
+        grid-template-columns: 2% 5% 10% 64% 16% 3%;
         grid-template-areas: ". . . auth-panel . " "line line line line line" ". logo-image logo-text nav-categories search-bar .";
         position: relative;
     }
 
     .auth-panel {
-        font-size: 85%;
+        font-size: 14px;
     }
 
     .auth-panel li {
-        padding-left: 8px;
+        padding-left: 1px;
     }
 
     .auth-panel img {
         width: 25px;
         height: auto;
     }
+    .auth-panel span{
+        display: none;
+    }
 
     .nav-categories {
-        font-size: 89%;
+        font-size: 100%;
     }
 
     .search-bar {
@@ -806,36 +904,8 @@ ul {
         margin-top: 10px;
         width: 80%;
     }
-
-    .arrow-left {
-        position: absolute;
-        left: 20%;
-    }
-
-    .arrow-right {
-        position: absolute;
-        right: 20%;
-    }
-
-    .info-bar-content {
-        width: 50%;
-        margin: 0 auto;
-        padding: 40px 0;
-    }
-
-    .info-bar-icon {
-        position: absolute;
-        left: 25%;
-    }
-
-    .info-bar-text {
-        position: absolute;
-        left: 40%;
-        right: 35%;
-        text-align: center;
-        line-height: 55px;
-        font-size: 96%;
-
+    #search-input{
+        width: 58%;
     }
 
     .app-content {
@@ -1012,52 +1082,25 @@ ul {
     }
 
     .auth-panel li {
-        padding-left: 8px;
+        padding-left: 0;
     }
 
     .auth-panel img {
         width: 25px;
         height: auto;
     }
+    .auth-panel span{
+        display:none;
+    }
 
     .nav-categories {
-        font-size: 95%;
+        font-size: 94%;
     }
 
     .search-bar {
         display: none;
     }
 
-    .arrow-left {
-        position: absolute;
-        left: 20%;
-    }
-
-    .arrow-right {
-        position: absolute;
-        right: 20%;
-    }
-
-    .info-bar-content {
-        width: 50%;
-        margin: 0 auto;
-        padding: 40px 0;
-    }
-
-    .info-bar-icon {
-        position: absolute;
-        left: 25%;
-    }
-
-    .info-bar-text {
-        position: absolute;
-        left: 38%;
-        right: 35%;
-        text-align: center;
-        line-height: 55px;
-        font-size: 81%;
-
-    }
 
     .app-content {
         grid-area: app-content;
